--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,28 @@ a {
 
 }
 
+.hat3 {
+  width: 155px;
+  height: 100px;
+  border-radius: 5px;
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.hat4 {
+  width: 155px;
+  height: 100px;
+  border: 1px solid white;
+  display: flex;
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+
+}
+
 .icons {
   display: flex;
   border-top: 1px solid cyan;
