--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,42 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #061936;
+  /* background-color: #061936; */
+  opacity: 10;
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
-a {
+.app-container {
+  position: relative;
+  width: 100%;
+  height: full;
+
+}
+
+.background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 99.5vw;
+  height: 100%;
+  object-fit: cover;
+  z-index: -2;
+}
+
+.blue-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 99.5vw;
+  height: 100%;
+  background-color: rgba(11, 11, 51, 0.8);
+
+  z-index: -1;
+}
+
+*/ a {
   text-decoration: none;
   outline: none;
 
@@ -42,15 +72,29 @@ a {
 }
 
 .card {
+  position: relative;
+  z-index: 1;
   padding: 5px 0px;
   width: 100%;
   height: 100%;
   display: flex;
   gap: 10px;
-  /* justify-content: space-between; */
   align-items: center;
   flex-direction: column;
 }
+
+/* .card {
+  padding: 5px 0px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 10px;
+  
+  align-items: center;
+  z-index: 2;
+  flex-direction: column;
+}
+ */
 
 .input {
   min-width: 500px;
