--- a/src/index.css
+++ b/src/index.css
@@ -71,3 +71,18 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: rgba(39, 30, 30, 0.87);
+
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: blue;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(19, 38, 145);
+}
