--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body {
   left: 0;
   width: 99.5vw;
   height: 100%;
-  background-color: rgba(11, 11, 51, 0.8);
+  background-color: rgba(11, 11, 51, 0.9);
 
   z-index: -1;
 }
@@ -45,7 +45,7 @@ body {
 
 .magaa {
   font-size: 4rem;
-  font-weight: bold;
+  font-weight: bolder;
 }
 
 .magaa2 {
@@ -59,7 +59,7 @@ body {
 
 .selecthat {
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 800;
 
 }
 
@@ -218,6 +218,14 @@ body {
   top: 20px;
   right: 10px;
   z-index: 400;
+  cursor: pointer;
+}
+
+.close-button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  color: red;
   cursor: pointer;
 }
 
