--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,18 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* background-color: #061936; */
   opacity: 10;
   width: 100%;
   height: 100%;
   position: relative;
+  overflow-x: hidden;
 }
 
 .app-container {
   position: relative;
   width: 100%;
   height: full;
+
 
 }
 
@@ -37,29 +38,18 @@ body {
   z-index: -1;
 }
 
+.piccontainer {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
 */ a {
   text-decoration: none;
   outline: none;
-
-}
-
-.magaa {
-  font-size: 4rem;
-  font-weight: bolder;
-}
-
-.magaa2 {
-  font-size: 1.4rem;
-  font-weight: 600;
-}
-
-.copyright {
-  font-size: 16px;
-}
-
-.selecthat {
-  font-size: 1rem;
-  font-weight: 800;
 
 }
 
@@ -68,8 +58,34 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 
 }
+
+.magaa {
+  font-size: 6rem;
+  font-weight: bolder;
+  margin-bottom: -15px;
+}
+
+.magaa2 {
+  font-size: 1rem;
+  margin-top: -7px;
+  font-weight: 600;
+}
+
+.copyright {
+  font-size: 16px;
+}
+
+.selecthat {
+  font-size: 1.4rem;
+  font-weight: 800;
+  text-align: center;
+
+}
+
+
 
 .card {
   position: relative;
@@ -78,9 +94,10 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
-  gap: 10px;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
 /* .card {
@@ -107,7 +124,26 @@ body {
   justify-content: center;
 }
 
-.hatboxes {
+
+.hats {
+  width: full;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+}
+
+.hatboxes1 {
+  margin-left: 2px;
+  display: flex;
+  width: 100%;
+  gap: 20px;
+  justify-content: center;
+
+}
+
+.hatboxe2 {
+  margin-left: 2px;
   display: flex;
   width: 100%;
   gap: 50px;
@@ -116,8 +152,8 @@ body {
 }
 
 .hat1 {
-  width: 150px;
-  height: 100px;
+  width: 130px;
+  height: 80px;
   border-radius: 5px;
   border: 1px solid white;
   display: flex;
@@ -127,8 +163,8 @@ body {
 }
 
 .hat2 {
-  width: 150px;
-  height: 100px;
+  width: 130px;
+  height: 80px;
   border: 1px solid white;
   display: flex;
   border-radius: 5px;
@@ -145,17 +181,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
-}
-
-.hat4 {
-  width: 155px;
-  height: 100px;
-  border: 1px solid white;
-  display: flex;
-  border-radius: 5px;
-  align-items: center;
-  justify-content: center;
 
 }
 
@@ -278,6 +303,14 @@ body {
     width: 70%;
   }
 
+  .magaa {
+    font-size: 5.7rem;
+
+
+  }
+
+
+
   .image-container {
     width: 70%;
   }
@@ -286,8 +319,22 @@ body {
     width: 70%;
   }
 
+  .hatboxe2 {
+    gap: 15px;
+  }
+
   .footer {
     width: 90%;
+  }
+
+  .hat1 {
+    width: 100px;
+    height: 100px;
+  }
+
+  .hat2 {
+    width: 100px;
+    height: 100px;
   }
 
   .icons {
@@ -299,6 +346,22 @@ body {
 @media (max-width: 550px) {
   .input {
     width: 90%;
+  }
+
+  .headings {
+    width: 90vw;
+  }
+
+  .magaa {
+    font-size: 5rem;
+
+
+  }
+
+  .magaa2 {
+    font-size: 0.9rem;
+    margin-top: -10px;
+
   }
 
   .btncrd {
@@ -327,12 +390,12 @@ body {
   }
 
   .hat1 {
-    width: 150px;
+    width: 100px;
     height: 100px;
   }
 
   .hat2 {
-    width: 150px;
+    width: 100px;
     height: 100px;
   }
 
@@ -341,8 +404,61 @@ body {
     width: 30%;
   }
 
+  .hatboxe2 {
+    gap: 10px;
+  }
+
   .input {
     min-width: 300px;
+    min-height: 500px;
+    max-height: 500px;
+  }
+
+  .copyright {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 400px) {
+
+
+
+  .hatboxes {
+    gap: 5px;
+  }
+
+  .hat1 {
+    width: 90px;
+    height: 90px;
+  }
+
+  .hat2 {
+    width: 90px;
+    height: 90px;
+  }
+
+
+  .hatboxe2 {
+    gap: 10px;
+
+  }
+
+  .hat3 {
+    width: 135px;
+
+  }
+
+  .magaa {
+    font-size: 4.6rem;
+  }
+
+  .magaa2 {
+    font-size: 0.8rem;
+    font-weight: 700;
+  }
+
+  .input {
+    min-width: 280px;
     min-height: 500px;
     max-height: 500px;
   }
