--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,25 @@ body {
 
 }
 
+/* .hat1 img,
+.hat2 img,
+.hat3 img {
+  width: auto;
+
+  height: 100%;
+
+  object-fit: contain;
+
+} */
+.hat1 img,
+.hat2 img {
+  object-fit: contain;
+  width: 100%;
+  /* Or adjust based on the container */
+  height: auto;
+  /* This keeps the aspect ratio consistent */
+}
+
 .icons {
   display: flex;
   border-top: 1px solid cyan;
